src/objects/FieloAlpha__Event__c.object
<CustomObject>
    <customHelpPage>FieloPLT__EventHelpBackEnd</customHelpPage>
    <description>Actions that do not generate points performed by members.</description>
    <fields>
        <fullName>FieloPLT__EventType__c</fullName>
        <label>EventType</label>
        <picklist>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Step 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral - Step 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Insert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Type__c</fullName>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>